# place-rs

./: Cargo.toml
src/: main.rs  storage.rs  views.rs
src/html/: index.html
